--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <button id="my-button">This is a button</button>
     <button id="add-data">Add data</button>
 
-    <textarea id="text-area">Input text</textarea>
+    <textarea id="text-area"></textarea>
     <ul id="ul-list"></ul>
   </body>
 </html>
